# Trace_V3_showcase

./: .gitignore  .prettierignore  PRODUCT_REVIEW.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.validation.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ai-agent-system-design-en.md  ai-agent-system-design.md  portfolio-case-study-cn.md  portfolio-case-study-en.md  product-decisions-cn.md  product-decisions-en.md
scripts/: run-workblock-validations.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  main.rs
src-tauri/src/transform/: heartbeat.rs  mod.rs
src-tauri/src/watcher/: mod.rs
src/components/: Sidebar.tsx
src/components/ui/: Toast.tsx
src/pages/: ActivityDetails.tsx  Analytics.tsx  Review.tsx  Settings.tsx  Timeline.tsx  Today.tsx
src/services/: dataService.ts  trackingService.ts
src/services/ipc/: activityIpc.ts  settingsIpc.ts
src/store/: useAppStore.ts
src/utils/: planning.ts  workblocks.ts
